--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 .glyphicon-spin {
-    -animation: spin .7s infinite linear;
     -webkit-animation: spin2 .7s infinite linear;
 }
 
@@ -8,9 +7,13 @@
     to { -webkit-transform: rotate(360deg);}
 }
 
-@keyframes spin {
-    from { transform: scale(1) rotate(0deg);}
-    to { transform: scale(1) rotate(360deg);}
+@-webkit-keyframes blink {
+  0% { opacity: 1.0; }
+  50% { opacity: 1.0; }
+  100% { opacity: 0.0; }
+}
+.blink {
+  -webkit-animation: blink 2s linear .25s infinite alternate;
 }
 
 /* not used atm
