--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ html {
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-width : 320px) and (max-width : 480px) {
   .desktop {
     display: none !important;
   }
@@ -110,6 +110,12 @@ html {
   }
   .torrents .size {
     width: 60px;
+  }
+}
+/* Intermediate screen (tablets or small PC) */
+@media only screen and (min-width : 481px) and (max-width : 1023px) {
+  .desktop {
+    display: none !important;
   }
 }
 
