using gulpfile to create CSS instead of multiple <link> tags

--- a/css/style.less
+++ b/css/style.less
@@ -49,5 +49,8 @@
 @import "utilities.less";
 @import "responsive-utilities.less";
 
+// Angular CSP
+@import (inline) "angular-csp.css";
+
 // Custom code
-@import (css) "style.css";
+@import (inline) "style.css";
