CSS: the hardest thing ever.

--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,7 @@
 // Custom code
 @import (inline) "old-style.css";
 @import "snippets/login.less";
+
+.text-center textarea {
+  overflow: hidden;
+}
