--- a/index.j2
+++ b/index.j2
@@ -9,13 +9,13 @@
 
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" type="text/css" href="/custom-bootstrap.css">
-  <script src="/libs/angular.js"></script>
-  <script src="/libs/angular-ui-router.js"></script>
-  <script src="/libs/angular-hotkeys.js"></script>
-  <script src="bundle.js"></script>
-  <script src="templates.js"></script>
+  <link rel="stylesheet" href="/<< rev['style.css'] >>">
+  <link rel="stylesheet" type="text/css" href="/<< rev['custom-bootstrap.css'] >>">
+  <script src="/libs/<< rev['angular.js'] >>"></script>
+  <script src="/libs/<< rev['angular-ui-router.js'] >>"></script>
+  <script src="/libs/<< rev['angular-hotkeys.js'] >>"></script>
+  <script src="<< rev['bundle.js'] >>"></script>
+  <script src="<< rev['templates.js'] >>"></script>
 </head>
 <body>
   <div ui-view="navbar"></div>
