--- a/css/style.less
+++ b/css/style.less
@@ -5,3 +5,15 @@
 .add-magnet {
   margin: 0 5px 5px;
 }
+
+@keyframes psyc-background {
+  0%   { background-color: #7B6CA0; }
+  25%  { background-color: #7CC256; }
+  50%  { background-color: #FEF730; }
+  75%  { background-color: #E24494; }
+  100% { background-color: #2DA0E2; }
+}
+
+.psycload {
+  animation: psyc-background 0.5s infinite;
+}
