--- a/index.j2
+++ b/index.j2
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading psycload">
             <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
             <strong>loading status...</strong>
           </div>
