--- a/css/old-style.css
+++ b/css/old-style.css
@@ -1,28 +1,3 @@
-.glyphicon-spin {
-    -webkit-animation: spin2 .7s infinite linear;
-}
-
-@-webkit-keyframes spin2 {
-    from { -webkit-transform: rotate(0deg);}
-    to { -webkit-transform: rotate(360deg);}
-}
-
-@-webkit-keyframes blink {
-  0% { opacity: 1.0; }
-  50% { opacity: 1.0; }
-  100% { opacity: 0.0; }
-}
-.blink {
-  -webkit-animation: blink 2s linear .25s infinite alternate;
-}
-
-/* not used atm
-.loading-jumbo {
-  text-align: center;
-  cursor: progress;
-}
-*/
-
 .right-spacer {
   margin-right: 10px;
 }
@@ -69,7 +44,7 @@ html {
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (max-width : 480px) {
   .desktop {
     display: none !important;
   }
