experimenting at better javascript gzip && asyncronicity

--- a/config.nginx.j2
+++ b/config.nginx.j2
@@ -11,8 +11,8 @@ server {
   listen 443 ssl spdy default_server;
   server_name << hostname >>;
   root << buildpath >>;
-
   include /etc/nginx/sites-available/ssl-config.partial;
+  gzip_types application/javascript text/css;
 
   # http://security.stackexchange.com/questions/55790/nginx-how-to-prevent-processing-requests-with-undefined-server-names-with-http
   if ( $http_host !~* ^(<< hostname | replace(r/\./g, '\\.') >>)$ ) {
