--- a/index.j2
+++ b/index.j2
@@ -12,8 +12,8 @@
 </head>
 <body>
   <div ui-view="navbar"></div>
-  <!-- main view => '' -->
-  <div class="container" ui-view>
+  {# main view => '' #}
+  <div class="container-fluid" ui-view>
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="panel panel-default">
