imported LESS roles inside SCSS, and everything seems to work

--- a/css/views/navbar.scss
+++ b/css/views/navbar.scss
@@ -6,4 +6,10 @@
   .right-spacer {
     margin-right: 10px;
   }
+  @media (max-width: $screen-md-max) {
+    li a {
+      text-align: center;
+      font-size: x-large;
+    }
+  }
 }
