--- a/config.nginx.j2
+++ b/config.nginx.j2
@@ -8,10 +8,10 @@ server {
 }
 
 server {
-  listen 443 ssl spdy default_server;
+  listen 443 ssl http2 default_server;
   server_name << hostname >>;
   root << buildpath >>;
-  include /etc/nginx/sites-available/ssl-config.partial;
+  include /etc/nginx/snippets/ssl-config.partial;
   gzip_types application/javascript text/css;
 
   proxy_read_timeout 2s;
