--- a/config.nginx.j2
+++ b/config.nginx.j2
@@ -24,12 +24,13 @@ server {
   }
 
   location /ad {
-    proxy_set_header Host www.alldebrid.com;
+    proxy_set_header Host alldebrid.com;
     proxy_set_header Accept-Encoding "";
-    proxy_cookie_domain www.alldebrid.com << hostname >>;
-    proxy_redirect www.alldebrid.com /ad/;
+    proxy_cookie_domain alldebrid.com << hostname >>;
+    proxy_redirect www.alldebrid.com /ad; # deprecated
     proxy_redirect / /ad/;
-    proxy_redirect https://www.alldebrid.com /ad/;
+    proxy_redirect https://www.alldebrid.com /ad; # deprecated
+    proxy_redirect https://alldebrid.com /ad;
     proxy_pass https://www.alldebrid.com/;
   }
 
